--- a/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
+++ b/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "app",
-  "version": "0.0.0",
-  "main": "0/server.js",
   "engines": {
     "node": "^4.0.0"
   },
   "scripts": {
-    "install": "0/components/0.CloudIDE/for/pinf.genesis/scripts/install.sh"
+    "install": "0/0.CloudIDE.Genesis/scripts/install.sh",
+    "start": "0/scripts/start.sh"
   }
 }
