--- a/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
+++ b/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
@@ -4,6 +4,6 @@
   },
   "scripts": {
     "install": "0/0.CloudIDE.Genesis/scripts/install.sh",
-    "start": "0/scripts/start.sh"
+    "start": "0/0.CloudIDE.Genesis/scripts/start.sh"
   }
 }
