--- a/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
+++ b/Meta/Inception.0/Deployment/com.heroku/tpl/package.json
@@ -3,7 +3,7 @@
     "node": "^4.0.0"
   },
   "scripts": {
-    "install": "0/0.CloudIDE.Genesis/scripts/install.sh",
-    "start": "0/0.CloudIDE.Genesis/scripts/start.sh"
+    "install": ".0/0.CloudIDE.Genesis/scripts/install.sh",
+    "start": ".0/0.CloudIDE.Genesis/scripts/start.sh"
   }
 }
